[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/attack/gaias-rocks1.png" type="Texture" id=1]
[ext_resource path="res://assets/attack/gaias-rocks2.png" type="Texture" id=2]
[ext_resource path="res://assets/attack/gaias-rocks3.png" type="Texture" id=3]
[ext_resource path="res://assets/attack/gaias-rocks4.png" type="Texture" id=4]
[ext_resource path="res://assets/attack/gaias-rocks5.png" type="Texture" id=5]
[ext_resource path="res://assets/attack/gaias-rocks6.png" type="Texture" id=6]
[ext_resource path="res://scenes/entity/projectile.gd" type="Script" id=7]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 1 ) ],
"loop": false,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]

[node name="projectile" type="KinematicBody2D"]
script = ExtResource( 7 )

[node name="animated_sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 10

[node name="collision_shape_2d" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )
disabled = true

[node name="hitbox" type="Area2D" parent="."]

[node name="collision_shape_2d" type="CollisionShape2D" parent="hitbox"]
shape = SubResource( 3 )
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
